<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_list_add_product">Add Product</string>
    <string name="label_button_sale">Sale</string>
    <string name="hint_product_name">Enter Product name</string>
    <string name="hint_product_quantity">Enter Product quantity</string>
    <string name="hint_product_price">Enter Product price</string>
    <string name="pick_supplier">Pick a Supplier:</string>
    <string name="choose_image">Please Enter the Url for the Product Image</string>
    <string name="product_add_btn">Add Product</string>
    <string name="err_msg_name_empty">Please enter a product name</string>
    <string name="err_msg_name_exists">There is already a product with that name</string>
    <string name="err_msg_quantity">Please enter a valid number</string>
    <string name="err_msg_price">Please enter a valid price</string>
    <string name="label_button_increse_quantity">Increse Quantity</string>
    <string name="label_button_decrease_quantity">Decrese Quantity</string>
    <string name="label_button_order_more">Order more</string>
    <string name="label_button_delete_product">Delete Product</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure want to delete :</string>
    <string name="dialog_answer_yes">Yes</string>
    <string name="dialog_answer_no">Cancel</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product Price</string>
</resources>
