<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detailProductImage"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_width="@dimen/detail_image_height"
            android:layout_height="@dimen/detail_image_height"
            android:layout_marginBottom="@dimen/detail_image_vertical_margin"/>

        <TextView
            android:id="@+id/detailProductName"
            android:text="@string/product_name"
            android:textSize="@dimen/detail_title_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/detail_text_margin"/>

        <TextView
            android:id="@+id/detailProductQuantity"
            android:text="@string/product_quantity"
            android:layout_marginBottom="@dimen/detail_text_margin"
            android:textSize="@dimen/detail_price_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/detailProductPrice"
            android:layout_marginBottom="@dimen/detail_text_margin"
            android:textSize="@dimen/detail_price_size"
            android:text="@string/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnIncrease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_button_increse_quantity"/>

        <Button
            android:id="@+id/btnDecrease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_button_decrease_quantity"/>

        <Button
            android:id="@+id/btnOrderMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_button_order_more"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/label_button_delete_product"/>
    </LinearLayout>
</ScrollView>